<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="256dp"
    android:layout_height="match_parent"
    android:background="@color/appWhite"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="RtlSymmetry">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/app_name"
            android:textColor="#7c7c7c" />

        <TextView
            android:id="@+id/main_drawer_sld_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/main_drawer_sld_name"
            android:textColor="@color/appRed" />

        <TextView
            android:id="@+id/main_drawer_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="#7c7c7c"
            android:textSize="18sp"
            tools:text="Иванов Сергей" />

        <TextView
            android:id="@+id/main_drawer_sections"
            style="@style/Widget.App.MainDrawer.MenuItem"
            android:layout_marginTop="32dp"
            android:drawableStart="@drawable/ic_sections"
            android:paddingStart="40dp"
            android:text="@string/main_drawer_sections_item" />

        <TextView
            android:id="@+id/main_drawer_current_section"
            style="@style/Widget.App.MainDrawer.MenuItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="40dp"
            tools:text="@string/main_drawer_section_not_selected" />

        <TextView
            android:id="@+id/main_drawer_measurements"
            style="@style/Widget.App.MainDrawer.MenuItem"
            android:drawableStart="@drawable/ic_measurements"
            android:paddingStart="80dp"
            android:text="@string/main_drawer_measurements_item" />

        <TextView
            android:id="@+id/main_drawer_reports"
            style="@style/Widget.App.MainDrawer.MenuItem"
            android:drawableStart="@drawable/ic_reports"
            android:paddingStart="80dp"
            android:text="@string/main_drawer_reports_item" />

        <TextView
            android:id="@+id/main_drawer_messages"
            style="@style/Widget.App.MainDrawer.MenuItem"
            android:drawableStart="@drawable/ic_messages"
            android:gravity="start"
            android:paddingStart="40dp"
            android:text="@string/main_drawer_messages_item"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/main_drawer_phones"
            style="@style/Widget.App.MainDrawer.MenuItem"
            android:drawableStart="@drawable/ic_employers"
            android:gravity="start"
            android:paddingStart="40dp"
            android:text="@string/main_drawer_phones_item"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/main_drawer_exit"
            style="@style/Widget.App.MainDrawer.MenuItem"
            android:layout_marginTop="48dp"
            android:drawableStart="@drawable/ic_exit"
            android:gravity="start"
            android:paddingStart="40dp"
            android:text="@string/main_drawer_exit_item"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/main_drawer_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:padding="0dp"
            android:text="@string/main_drawer_version"
            android:textColor="#bababa" />

    </LinearLayout>

</ScrollView>