<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/wheel_params_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/param_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/wheel_params"
        android:paddingStart="4dp"
        android:paddingTop="8dp"
        android:paddingEnd="4dp"
        android:paddingBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_param"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/measurement_wheel_parametr"
        android:textAllCaps="true" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_param"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.375" />

    <TextView
        android:id="@+id/left_value"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/wheel_params"
        android:gravity="center"
        android:paddingStart="4dp"
        android:paddingTop="8dp"
        android:paddingEnd="4dp"
        android:paddingBottom="8dp"
        android:text="@string/measurement_wheel_lv"
        app:layout_constraintStart_toEndOf="@id/guideline_param"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_left"
        android:textAllCaps="true" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/right_value"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/wheel_params"
        android:gravity="center"
        android:paddingStart="4dp"
        android:paddingTop="8dp"
        android:paddingEnd="4dp"
        android:paddingBottom="8dp"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        android:text="@string/measurement_wheel_pr"
        android:textAllCaps="true" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.625" />

    <TextView
        android:id="@+id/norm_value"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/wheel_params"
        android:gravity="center"
        android:paddingStart="4dp"
        android:paddingTop="8dp"
        android:paddingEnd="4dp"
        android:paddingBottom="8dp"
        app:layout_constraintStart_toEndOf="@id/guideline_right"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_norm"
        android:text="@string/measurement_wheel_norm"
        android:textAllCaps="true" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_norm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <TextView
        android:id="@+id/min_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/wheel_params"
        android:gravity="center"
        android:paddingStart="4dp"
        android:paddingTop="8dp"
        android:paddingEnd="4dp"
        android:paddingBottom="8dp"
        app:layout_constraintStart_toEndOf="@id/guideline_norm"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_min"
        android:text="@string/measurement_wheel_min"
        android:textAllCaps="true" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_min"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.875" />

    <TextView
        android:id="@+id/max_value"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/wheel_params"
        android:gravity="center"
        android:paddingStart="4dp"
        android:paddingTop="8dp"
        android:paddingEnd="4dp"
        android:paddingBottom="8dp"
        app:layout_constraintStart_toEndOf="@id/guideline_min"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/measurement_wheel_max"
        android:textAllCaps="true" />

</androidx.constraintlayout.widget.ConstraintLayout>