<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/pair_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="КП 0987612362371723" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/wheel_pair_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/white"
        android:elevation="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pair_number">

        <TextView
            android:id="@+id/axis_number_label"
            style="@style/Widget.MeasurementDetail.WheelPairLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/measurement_wheel_number_wheel"
            app:layout_constraintEnd_toStartOf="@id/axis_number_value"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/axis_number_value"
            style="@style/Widget.MeasurementDetail.WheelPairValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/axis_number_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/axis_number_label"
            app:layout_constraintTop_toTopOf="@id/axis_number_label"
            tools:text="12354311231" />

        <ImageView
            android:id="@+id/axis_number_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_wheels"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/axis_number_label" />

        <TextView
            android:id="@+id/axis_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="@+id/axis_number_image"
            app:layout_constraintEnd_toEndOf="@+id/axis_number_image"
            app:layout_constraintStart_toStartOf="@+id/axis_number_image"
            app:layout_constraintTop_toTopOf="@+id/axis_number_image"
            tools:text="1" />

        <TextView
            android:id="@+id/flange_left_number_label"
            style="@style/Widget.MeasurementDetail.WheelPairLabel"
            android:layout_marginStart="8dp"
            android:text="@string/measurement_wheel_flange_left_number_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/axis_number_image" />

        <TextView
            android:id="@+id/flange_left_number_value"
            style="@style/Widget.MeasurementDetail.WheelPairValue"
            app:layout_constraintBottom_toBottomOf="@+id/flange_left_number_label"
            app:layout_constraintStart_toEndOf="@id/flange_left_number_label"
            app:layout_constraintTop_toTopOf="@+id/flange_left_number_label"
            tools:text="123121" />

        <TextView
            android:id="@+id/flange_right_number_label"
            style="@style/Widget.MeasurementDetail.WheelPairLabel"
            android:layout_marginEnd="8dp"
            android:text="@string/measurement_wheel_flange_right_number_label"
            app:layout_constraintEnd_toStartOf="@id/flange_right_number_value"
            app:layout_constraintTop_toBottomOf="@id/axis_number_image" />

        <TextView
            android:id="@+id/flange_right_number_value"
            style="@style/Widget.MeasurementDetail.WheelPairValue"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@id/flange_right_number_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/flange_right_number_label"
            tools:text="123121" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/wheel_params_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flange_right_number_value"
            tools:itemCount="3"
            tools:listitem="@layout/item_wheel_param" />

        <TextView
            android:id="@+id/tuning_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_text_view_choice"
            android:gravity="center_vertical"
            android:text="@string/measurement_wheel_tuning_handmade"
            android:textColor="@color/text_default_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wheel_params_recycler" />

        <TextView
            android:id="@+id/reason_label"
            style="@style/Widget.MeasurementDetail.WheelPairLabel"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/measurement_wheel_reason_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tuning_cb" />

        <TextView
            android:id="@+id/reason_value"
            style="@style/Widget.MeasurementDetail.WheelPairValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/reason_label"
            app:layout_constraintStart_toEndOf="@id/reason_label"
            app:layout_constraintTop_toTopOf="@id/reason_label"
            tools:text="Нет" />

        <Button
            android:id="@+id/edit_btn"
            style="@style/Widget.App.Button.BlackCorner"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:text="@string/measurement_wheel_edit_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>